CHANGELOG 28/07/2022

- Continued data stuff